--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -413,14 +413,8 @@
     "    plt.rcParams[\"figure.figsize\"] = (50, 50)\n",
     "\n",
     "    plt.scatter(xs, ys, color=color, alpha=0.3)\n",
-    "\n",
-    "    avg_x = xs.mean()\n",
-    "    avg_y = ys.mean()\n",
-    "\n",
-    "    plt.scatter(avg_x, avg_y, marker=\"x\", color=color, s=100, edgecolors=\"black\")\n",
-    "    # size of plot\n",
+    "    plt.scatter(xs.mean(), ys.mean(), marker=\"x\", color=color, s=100, edgecolors=\"black\")\n",
     "    \n",
-    "\n",
     "    \n",
     "\n",
     "\n",
